--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
     <div class="bookmarks-container">
       <div class="bookmark"><a href="https://mail.proton.me/u/0/inbox">mail</a></div>
       <div class="bookmark"><a href="https://github.com/0xE1C411F">repo</a></div>
+      <div class="bookmark"><a href="https://search.nixos.org/packages?channel=25.11&">pkgs</a></div>
     </div>
   </body>
 </html>
